--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "4"
-                feed_list: "https://dev.to/feed/mrpaulishaili", "https://medium.com/feed/@mrpaulishaili"
+                feed_list: "https://dev.to/feed/mrpaulishaili, https://medium.com/feed/@mrpaulishaili"
